Added section one html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,28 @@
             <img src="images/blue-hero.jpg" alt="blue background with waves">
         </div>
     </div>
-    
+    <div class="section-one">
+        <p class="section-one-header">
+            Wow look at this cool info
+        </p>
+        <div class="section-one-info">
+            <div class="section-one-square">
+                <div class="square"></div>
+                <p class="square-text">Wow look at this coolio texto</p>
+            </div>
+            <div class="section-one-square">
+                <div class="square"></div>
+                <p class="square-text">Look at this text under the image</p>
+            </div>
+            <div class="section-one-square">
+                <div class="square"></div>
+                <p class="square-text">Now this some text under an image if I've ever seen it</p>
+            </div>
+            <div class="section-one-square">
+                <div class="square"></div>
+                <p class="square-text">The voices are here and they won't stop</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
