--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
         </p>
         <div class="section-one-info">
             <div class="section-one-square">
-                <div class="square"></div>
+                <div class="square-one"></div>
                 <p class="square-text">Wow look at this coolio texto</p>
             </div>
             <div class="section-one-square">
-                <div class="square"></div>
+                <div class="square-two"></div>
                 <p class="square-text">Look at this text under the image</p>
             </div>
             <div class="section-one-square">
-                <div class="square"></div>
+                <div class="square-three"></div>
                 <p class="square-text">Now this some text under an image if I've ever seen it</p>
             </div>
             <div class="section-one-square">
-                <div class="square"></div>
+                <div class="square-four"></div>
                 <p class="square-text">The voices are here and they won't stop</p>
             </div>
         </div>
