Added section two html

--- a/index.html
+++ b/index.html
@@ -56,5 +56,13 @@
             </div>
         </div>
     </div>
+    <div class="section-two">
+        <p class="section-two-testimony">
+            This is a quote that someone said. Do you like my business more now? I hope you do. I payed good money for th- I mean I hope you can see this satisfied customer and consider.
+        </p>
+        <p class="section-two-author">
+            - Trust me
+        </p>
+    </div>
 </body>
 </html>
