Added section three html

--- a/index.html
+++ b/index.html
@@ -64,5 +64,16 @@
             - Trust me
         </p>
     </div>
+    <div class="section-three">
+        <div class="section-three-blob">
+            <div class="section-three-blob-left">
+                <p class="section-three-header">PRESS THE BUTTON! DO IT!</p>
+                <p class="section-three-sub">You know you want to. Click it right there.</p>
+            </div>
+            <div class="section-three-blob-right">
+                <p>Sign up</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
