Added section three css

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <p class="section-three-sub">You know you want to. Click it right there.</p>
             </div>
             <div class="section-three-blob-right">
-                <p>Sign up</p>
+                <p class="section-three-signup">Sign up</p>
             </div>
         </div>
     </div>
